// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  @media only screen and (max-width: 1023px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-2 section>p>a {
  font-weight: 600;
}

.emotion-2:not(:last-child):after {
  content: '';
  border-left: 2px dashed #E7EEEC;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: -1;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #E4F4E4;
  color: #116149;
  height: 34px;
  width: 34px;
}

.emotion-8 {
  margin-top: 5px;
  padding-bottom: 64px;
}

.emotion-8>section>:first-of-type {
  margin-top: 0;
}

@media only screen and (max-width: 767px) {
  .emotion-8 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-8 {
    padding-bottom: 32px;
  }
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p>
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p>
          <a
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p>
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p>
          <a
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  @media only screen and (max-width: 1023px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  gap: 33px;
}

.emotion-2 section>p>a {
  font-weight: 600;
}

.emotion-2:not(:last-child):after {
  content: '';
  border-left: 2px dashed #E7EEEC;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
  z-index: -1;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #E4F4E4;
  color: #116149;
  height: 34px;
  width: 34px;
}

.emotion-8 {
  margin-top: 5px;
  padding-bottom: 64px;
}

.emotion-8>section>:first-of-type {
  margin-top: 0;
}

@media only screen and (max-width: 767px) {
  .emotion-8 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-8 {
    padding-bottom: 32px;
  }
}

.emotion-10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-11 {
  border-radius: 0!important;
  display: initial!important;
  margin: initial!important;
}

.emotion-13 {
  margin-top: -175px;
  position: absolute;
  padding-bottom: 2px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 1
            <a
              class="headerlink emotion-10"
              href="#step-1"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-1"
            />
          </h1>
          <p>
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 2
            <a
              class="headerlink emotion-10"
              href="#step-2"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-2"
            />
          </h1>
          <p>
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          3
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 3
            <a
              class="headerlink emotion-10"
              href="#step-3"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-3"
            />
          </h1>
          <p>
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          4
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 4
            <a
              class="headerlink emotion-10"
              href="#step-4"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-4"
            />
          </h1>
          <p>
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          5
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 5
            <a
              class="headerlink emotion-10"
              href="#step-5"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-5"
            />
          </h1>
          <p>
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          6
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 6
            <a
              class="headerlink emotion-10"
              href="#step-6"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-6"
            />
          </h1>
          <p>
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          7
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <section>
          <h1>
            Step 7
            <a
              class="headerlink emotion-10"
              href="#step-7"
              title="Permalink to this heading"
            >
              <img
                class="emotion-11 emotion-12"
                src="/assets/link.svg"
              />
            </a>
            <div
              class="emotion-13 emotion-14"
              id="step-7"
            />
          </h1>
          <p>
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
}

.emotion-2 section>p>a {
  font-weight: 600;
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #333;
  color: #FFFFFF;
  height: 24px;
  width: 24px;
}

.emotion-8 {
  margin-bottom: 24px;
}

.emotion-8>section>:first-of-type {
  margin-top: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          1
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p>
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p>
          <a
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          2
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p>
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p>
          <a
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
